--- a/t/all.html
+++ b/t/all.html
@@ -9,12 +9,10 @@ qunitTap(QUnit, function () { console.log.apply(console, arguments) });
 //QUnit.config.autostart = false;
 var is = QUnit.strictEqual;
 </script>
-
-<title>Mod Testing</title>
+<title>Testing evem-min.js</title>
 </head>
 <body>
 <div id="qunit"></div>
-<div id="qunit-fixture"></div>
 </body>
 <!-- テストを受けるモジュール -->
 <script src="../evem-min.js"></script>
