--- a/t/all.html
+++ b/t/all.html
@@ -20,3 +20,4 @@ var is = QUnit.strictEqual;
 <script src="./00_load.js"></script>
 <script src="./01.js"></script>
 <script src="./02.js"></script>
+<script src="./03.js"></script>
