add ".mixin" and ".inherits"

--- a/t/all.html
+++ b/t/all.html
@@ -21,3 +21,4 @@ var is = QUnit.strictEqual;
 <script src="./01.js"></script>
 <script src="./02.js"></script>
 <script src="./03.js"></script>
+<script src="./04.js"></script>
